# real-mlops

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check-lockfile.yml  ci.yaml  docker-ci.yml.none  sqlmesh-cd.yml  sqlmesh.yml
ext_table1/part=0/: part-00001-249c506d-e478-43fa-8b71-7fc9158338eb-c000.snappy.parquet  part-00001-39465752-354a-489c-b6ba-c54f251a3c66-c000.snappy.parquet  part-00001-634952db-94bf-4cb5-9a18-a94970dc4dae-c000.snappy.parquet  part-00001-86de07ed-b631-406f-8c0c-7dc30d938511-c000.snappy.parquet  part-00001-9b7587c5-fb1b-4535-93e3-cf274a16fae1-c000.snappy.parquet  part-00001-a7defd53-3d12-4457-ad12-d7888c95ed80-c000.snappy.parquet
ext_table1/part=1/: part-00001-34826ded-f136-4c72-8363-881537050caa-c000.snappy.parquet  part-00001-aaa7aee1-3927-46b9-9962-ea6fc68e7495-c000.snappy.parquet  part-00001-ec8aadc4-6766-4fbd-ab6c-66fe999ce1d8-c000.snappy.parquet
ext_table2/part=0/: part-00001-69c38839-a156-48ca-b1b4-cb4f0384f71f-c000.snappy.parquet  part-00001-ad459f7f-15ec-4d88-b740-5766f2a56fe6-c000.snappy.parquet  part-00001-c28005df-cc49-492c-8343-599f74400340-c000.snappy.parquet  part-00001-ddbc6072-b451-4a85-91fc-4609dd8df3d4-c000.snappy.parquet  part-00001-e393eae8-a38e-4a66-834e-9804a8c5357c-c000.snappy.parquet
ext_table2/part=1/: part-00001-019d7b70-2044-4f94-a36e-ac82e622ab3c-c000.snappy.parquet  part-00001-1f2568e5-12e6-499f-858f-eabeda17e5bb-c000.snappy.parquet  part-00001-1fc36859-f293-4f59-8f64-bf6ef565ba96-c000.snappy.parquet  part-00001-6e8ff4bf-3d8b-494e-bfd5-829bd8096480-c000.snappy.parquet  part-00001-92ff1d00-683d-4474-aa0b-f16d49532127-c000.snappy.parquet  part-00001-9e8180f0-0fe5-4a1f-9477-6eb131d82df9-c000.snappy.parquet  part-00001-a675923c-69a0-4e68-a4e9-115020960220-c000.snappy.parquet  part-00001-e0ff97bc-57bf-4ed8-9e2e-aaabc3f02b6c-c000.snappy.parquet
src/: hello.py  test_read_write.py
src/features/: README.md  __config.yaml  config.py  config.yaml  constants.py  db.db  utils.py
src/features/audits/: assert_positive_order_ids.sql
src/features/macros/: upsert_delta.py
src/features/models/: cust_cost_spread.sql  mean_cust_retention.sql  seed_model.sql  train.py
src/features/tests/: test_cust_cost_spread.yaml
src/flows/: main.py
