[project]
name = "real-mlops"
dynamic = ["version"]
description = "MLOps doesn't have to be that hard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.1.2, <2",
    "prefect>=3.1.0, <4",
    "sqlmesh[github,slack,llm]>=0.130.1, <0.131",
    "pydantic >=2.9.2, <3",
    "polars >=1.12, <2",
    "pyarrow >=18, <19",
    "deltalake >=0.21.0, <0.22",
]

[project.optional-dependencies]
dev = [
    "coverage >=7.4.0, <8",
    "mypy >=1.10, <2",
    "pytest >=8.2, <9",
    "pytest-cov >=5.0.0, <6",
    "ruff >=0.4.5, <1.0",
    "ipython"
]

[project.urls]
Documentation = "https://github.com/ben-epstein/real-mlops"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Include rules for: pyFlakes, pycodestyle (Err/Warn), pyDocstyle, Isort, Flake8-FIXme, PyLinT, NumPY, debugger
# See rules and codes: https://docs.astral.sh/ruff/rules/
select = ["F", "E", "W", "D", "I001", "FIX", "PL", "NPY", "T100"]
dummy-variable-rgx = "_$|dummy"
ignore = ["FIX002", "D203", "D213"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
mypy_path = ["src", "tests"]
exclude = ["dist", "build", ".venv"]

[tool.coverage.run]
source = ["src", "tests"]
omit = ["*__init__.py"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError'
]
