[project]
version = "0.0.1"
name = "real-mlops"
# dynamic = ["version"]
description = "MLOps doesn't have to be that hard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.1.2, <2",
    "prefect>=3.1.0, <4",
    "sqlmesh[github,slack,llm]>=0.132.0, <0.133",
    "pydantic >=2.9.2, <3",
    "polars[pyarrow] >=1.12, <2",
    "pyarrow >=18, <19",
    "deltalake >=0.21.0, <0.22",
]

# [tool.setuptools.dynamic]
# version = {attr = "src.__version__"}


[tool.setuptools]
package-dir = {"" = "src"}      

[tool.setuptools.packages.find]
where = ["src"]                 
include = ["features", "flows"]

[dependency-groups]
dev = [
    "coverage >=7.4.0, <8",
    "mypy >=1.10, <2",
    "pytest >=8.2, <9",
    "pytest-cov >=5.0.0, <6",
    "ruff >=0.4.5, <1.0",
    "ipython",
    "watchfiles",
    # sqlmesh[web] has really tight dependencies that are in conflict with prod packages. 
    # Because this is for dev we loosen them
    "fastapi >=0.110.2, <1.0",
    "watchfiles>=0.19.0",
    "uvicorn[standard] >=0.22.0, <0.23",
    "sse-starlette>=0.2.2",
    "sqlmesh[github]"
]

[project.urls]
Documentation = "https://github.com/ben-epstein/real-mlops"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Include rules for: pyFlakes, pycodestyle (Err/Warn), pyDocstyle, Isort, Flake8-FIXme, PyLinT, NumPY, debugger
# See rules and codes: https://docs.astral.sh/ruff/rules/
select = ["F", "E", "W", "D", "I001", "FIX", "PL", "NPY", "T100"]
dummy-variable-rgx = "_$|dummy"
ignore = [
    "FIX002",  # block TODO comments
    "D104",    # require package __init__ docstring
    "D100"     # require module file docstring
]

[tool.ruff.lint.pylint]
max-args = 10


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
mypy_path = ["src", "tests"]
exclude = ["dist", "build", ".venv"]

[tool.coverage.run]
source = ["src", "tests"]
omit = ["*__init__.py"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError'
]

